website/versioned_docs/version-0.76/native-api/index-api-windows.md
---
id: version-0.76-Native-API-Reference
title: namespace Microsoft.ReactNative
sidebar_label: Full reference
: 
original_id: Native-API-Reference
---

## Enums
- [`AccessibilityRoles`](AccessibilityRoles)
- [`AccessibilityStateCheckedValue`](AccessibilityStateCheckedValue)
- [`AccessibilityStates`](AccessibilityStates)
- [`AccessibilityValue`](AccessibilityValue)
- [`AriaRole`](AriaRole)
- [`BackNavigationHandlerKind`](BackNavigationHandlerKind)
- [`CanvasComposite`](CanvasComposite)
- [`CanvasEdgeBehavior`](CanvasEdgeBehavior)
- [`EffectBorderMode`](EffectBorderMode)
- [`EffectOptimization`](EffectOptimization)
- [`JSIEngine`](JSIEngine)
- [`JSValueType`](JSValueType)
- [`JsiErrorType`](JsiErrorType)
- [`JsiValueKind`](JsiValueKind)
- [`LoadingState`](LoadingState)
- [`LogLevel`](LogLevel)
- [`MethodReturnType`](MethodReturnType)
- [`PointerEventKind`](PointerEventKind)
- [`RedBoxErrorType`](RedBoxErrorType)
- [`ViewManagerPropertyType`](ViewManagerPropertyType)
## Interfaces
- [`IJSValueReader`](IJSValueReader)
- [`IJSValueWriter`](IJSValueWriter)
- [`IJsiByteBuffer`](IJsiByteBuffer)
- [`IJsiHostObject`](IJsiHostObject)
- [`IReactContext`](IReactContext)
- [`IReactDispatcher`](IReactDispatcher)
- [`IReactModuleBuilder`](IReactModuleBuilder)
- [`IReactNonAbiValue`](IReactNonAbiValue)
- [`IReactNotificationArgs`](IReactNotificationArgs)
- [`IReactNotificationService`](IReactNotificationService)
- [`IReactNotificationSubscription`](IReactNotificationSubscription)
- [`IReactPackageBuilder`](IReactPackageBuilder)
- [`IReactPackageProvider`](IReactPackageProvider)
- [`IReactPropertyBag`](IReactPropertyBag)
- [`IReactPropertyName`](IReactPropertyName)
- [`IReactPropertyNamespace`](IReactPropertyNamespace)
- [`IReactSettingsSnapshot`](IReactSettingsSnapshot)
- [`IReactViewHost`](IReactViewHost)
- [`IReactViewInstance`](IReactViewInstance)
- [`IRedBoxErrorFrameInfo`](IRedBoxErrorFrameInfo)
- [`IRedBoxErrorInfo`](IRedBoxErrorInfo)
- [`IRedBoxHandler`](IRedBoxHandler)
- [`ITimer`](ITimer)
- [`IViewManager`](IViewManager)
- [`IViewManagerCreateWithProperties`](IViewManagerCreateWithProperties)
- [`IViewManagerRequiresNativeLayout`](IViewManagerRequiresNativeLayout)
- [`IViewManagerWithChildren`](IViewManagerWithChildren)
- [`IViewManagerWithCommands`](IViewManagerWithCommands)
- [`IViewManagerWithDropViewInstance`](IViewManagerWithDropViewInstance)
- [`IViewManagerWithExportedEventTypeConstants`](IViewManagerWithExportedEventTypeConstants)
- [`IViewManagerWithExportedViewConstants`](IViewManagerWithExportedViewConstants)
- [`IViewManagerWithNativeProperties`](IViewManagerWithNativeProperties)
- [`IViewManagerWithOnLayout`](IViewManagerWithOnLayout)
- [`IViewManagerWithPointerEvents`](IViewManagerWithPointerEvents)
- [`IViewManagerWithReactContext`](IViewManagerWithReactContext)
## Structs
- [`AccessibilityAction`](AccessibilityAction)
- [`DesktopWindowMessage`](DesktopWindowMessage)
- [`JsiBigIntRef`](JsiBigIntRef)
- [`JsiObjectRef`](JsiObjectRef)
- [`JsiPropertyIdRef`](JsiPropertyIdRef)
- [`JsiScopeState`](JsiScopeState)
- [`JsiStringRef`](JsiStringRef)
- [`JsiSymbolRef`](JsiSymbolRef)
- [`JsiValueRef`](JsiValueRef)
- [`JsiWeakObjectRef`](JsiWeakObjectRef)
## Classes
- [`BorderEffect`](BorderEffect)
- [`ColorSourceEffect`](ColorSourceEffect)
- [`CompositeStepEffect`](CompositeStepEffect)
- [`DevMenuControl`](DevMenuControl)
- [`DynamicAutomationPeer`](DynamicAutomationPeer)
- [`DynamicAutomationProperties`](DynamicAutomationProperties)
- [`DynamicValueProvider`](DynamicValueProvider)
- [`GaussianBlurEffect`](GaussianBlurEffect)
- [`HttpSettings`](HttpSettings)
- [`InstanceCreatedEventArgs`](InstanceCreatedEventArgs)
- [`InstanceDestroyedEventArgs`](InstanceDestroyedEventArgs)
- [`InstanceLoadedEventArgs`](InstanceLoadedEventArgs)
- [`JsiError`](JsiError)
- [`JsiPreparedJavaScript`](JsiPreparedJavaScript)
- [`JsiRuntime`](JsiRuntime)
- [`LayoutService`](LayoutService)
- [`QuirkSettings`](QuirkSettings)
- [`ReactApplication`](ReactApplication)
- [`ReactCoreInjection`](ReactCoreInjection)
- [`ReactDispatcherHelper`](ReactDispatcherHelper)
- [`ReactInstanceSettings`](ReactInstanceSettings)
- [`ReactNativeHost`](ReactNativeHost)
- [`ReactNotificationServiceHelper`](ReactNotificationServiceHelper)
- [`ReactPointerEventArgs`](ReactPointerEventArgs)
- [`ReactPropertyBagHelper`](ReactPropertyBagHelper)
- [`ReactRootView`](ReactRootView)
- [`ReactViewOptions`](ReactViewOptions)
- [`RedBoxHelper`](RedBoxHelper)
- [`Timer`](Timer)
- [`ViewControl`](ViewControl)
- [`ViewPanel`](ViewPanel)
- [`XamlHelper`](XamlHelper)
- [`XamlMetaDataProvider`](XamlMetaDataProvider)
- [`XamlUIService`](XamlUIService)
## Delegates
- [`AccessibilityActionEventHandler`](AccessibilityActionEventHandler)
- [`AccessibilityInvokeEventHandler`](AccessibilityInvokeEventHandler)
- [`ConstantProviderDelegate`](ConstantProviderDelegate)
- [`EmitEventSetterDelegate`](EmitEventSetterDelegate)
- [`EventEmitterInitializerDelegate`](EventEmitterInitializerDelegate)
- [`InitializerDelegate`](InitializerDelegate)
- [`JSValueArgWriter`](JSValueArgWriter)
- [`JsiByteArrayUser`](JsiByteArrayUser)
- [`JsiHostFunction`](JsiHostFunction)
- [`LogHandler`](LogHandler)
- [`MethodDelegate`](MethodDelegate)
- [`MethodResultCallback`](MethodResultCallback)
- [`ReactCreatePropertyValue`](ReactCreatePropertyValue)
- [`ReactDispatcherCallback`](ReactDispatcherCallback)
- [`ReactModuleProvider`](ReactModuleProvider)
- [`ReactNotificationHandler`](ReactNotificationHandler)
- [`ReactViewManagerProvider`](ReactViewManagerProvider)
- [`SyncMethodDelegate`](SyncMethodDelegate)
- [`TimerFactory`](TimerFactory)
- [`UIBatchCompleteCallback`](UIBatchCompleteCallback)
