website/versioned_docs/version-0.79/native-api/index-api-windows.md
---
id: version-0.79-Native-API-Reference
title: Microsoft.ReactNative APIs
original_id: Native-API-Reference
---

![Architecture](https://img.shields.io/badge/architecture-new_&_old-green)

## Classes
- [ActivityIndicatorComponentView](ActivityIndicatorComponentView)
- [BorderEffect](BorderEffect)
- [CallInvoker](CallInvoker)
- [Color](Color)
- [ColorSourceEffect](ColorSourceEffect)
- [ComponentView](ComponentView)
- [CompositeStepEffect](CompositeStepEffect)
- [CompositionHwndHost](CompositionHwndHost)
- [CompositionUIService](CompositionUIService)
- [ContentIslandComponentView](ContentIslandComponentView)
- [CustomResourceResult](CustomResourceResult)
- [DebuggingOverlayComponentView](DebuggingOverlayComponentView)
- [DevMenuControl](DevMenuControl)
- [DynamicAutomationPeer](DynamicAutomationPeer)
- [DynamicAutomationProperties](DynamicAutomationProperties)
- [DynamicValueProvider](DynamicValueProvider)
- [EventEmitter](EventEmitter)
- [FocusManager](FocusManager)
- [FocusNavigationRequest](FocusNavigationRequest)
- [FocusNavigationResult](FocusNavigationResult)
- [GaussianBlurEffect](GaussianBlurEffect)
- [GettingFocusEventArgs](GettingFocusEventArgs)
- [HandleCommandArgs](HandleCommandArgs)
- [HttpSettings](HttpSettings)
- [ImageComponentView](ImageComponentView)
- [ImageFailedResponse](ImageFailedResponse)
- [ImageProps](ImageProps)
- [ImageResponse](ImageResponse)
- [ImageSource](ImageSource)
- [InstanceCreatedEventArgs](InstanceCreatedEventArgs)
- [InstanceDestroyedEventArgs](InstanceDestroyedEventArgs)
- [InstanceLoadedEventArgs](InstanceLoadedEventArgs)
- [JsiError](JsiError)
- [JsiPreparedJavaScript](JsiPreparedJavaScript)
- [JsiRuntime](JsiRuntime)
- [LayoutContext](LayoutContext)
- [LayoutMetricsChangedArgs](LayoutMetricsChangedArgs)
- [LayoutService](LayoutService)
- [LosingFocusEventArgs](LosingFocusEventArgs)
- [MicrosoftCompositionContextHelper](MicrosoftCompositionContextHelper)
- [MountChildComponentViewArgs](MountChildComponentViewArgs)
- [ParagraphComponentView](ParagraphComponentView)
- [Pointer](Pointer)
- [PointerPoint](PointerPoint)
- [PointerPointProperties](PointerPointProperties)
- [PointerRoutedEventArgs](PointerRoutedEventArgs)
- [PortalComponentView](PortalComponentView)
- [QuirkSettings](QuirkSettings)
- [ReactApplication](ReactApplication)
- [ReactCoreInjection](ReactCoreInjection)
- [ReactDispatcherHelper](ReactDispatcherHelper)
- [ReactInstanceSettings](ReactInstanceSettings)
- [ReactNativeAppBuilder](ReactNativeAppBuilder)
- [ReactNativeHost](ReactNativeHost)
- [ReactNativeIsland](ReactNativeIsland)
- [ReactNativeWin32App](ReactNativeWin32App)
- [ReactNotificationServiceHelper](ReactNotificationServiceHelper)
- [ReactPointerEventArgs](ReactPointerEventArgs)
- [ReactPropertyBagHelper](ReactPropertyBagHelper)
- [ReactRootView](ReactRootView)
- [ReactViewOptions](ReactViewOptions)
- [RedBoxHelper](RedBoxHelper)
- [RootComponentView](RootComponentView)
- [RootViewSizeChangedEventArgs](RootViewSizeChangedEventArgs)
- [ScrollViewComponentView](ScrollViewComponentView)
- [ShadowNode](ShadowNode)
- [StreamImageResponse](StreamImageResponse)
- [SwitchComponentView](SwitchComponentView)
- [SystemCompositionContextHelper](SystemCompositionContextHelper)
- [Theme](Theme)
- [Timer](Timer)
- [UnimplementedNativeViewComponentView](UnimplementedNativeViewComponentView)
- [UnmountChildComponentViewArgs](UnmountChildComponentViewArgs)
- [UriBrushFactoryImageResponse](UriBrushFactoryImageResponse)
- [ViewComponentView](ViewComponentView)
- [ViewControl](ViewControl)
- [ViewPanel](ViewPanel)
- [ViewProps](ViewProps)
- [WindowsModalHostComponentView](WindowsModalHostComponentView)
- [WindowsTextInputComponentView](WindowsTextInputComponentView)
- [XamlHelper](XamlHelper)
- [XamlMetaDataProvider](XamlMetaDataProvider)
- [XamlUIService](XamlUIService)
- [YogaLayoutableShadowNode](YogaLayoutableShadowNode)

## Delegates
- [AccessibilityActionEventHandler](AccessibilityActionEventHandler)
- [AccessibilityInvokeEventHandler](AccessibilityInvokeEventHandler)
- [CallFunc](CallFunc)
- [ComponentIslandComponentViewInitializer](ComponentIslandComponentViewInitializer)
- [ComponentViewInitializer](ComponentViewInitializer)
- [ConstantProviderDelegate](ConstantProviderDelegate)
- [CreateInternalVisualDelegate](CreateInternalVisualDelegate)
- [CreateVisualDelegate](CreateVisualDelegate)
- [EmitEventSetterDelegate](EmitEventSetterDelegate)
- [EventEmitterInitializerDelegate](EventEmitterInitializerDelegate)
- [HandleCommandDelegate](HandleCommandDelegate)
- [InitializerDelegate](InitializerDelegate)
- [InitialStateDataFactory](InitialStateDataFactory)
- [IVisualToMountChildrenIntoDelegate](IVisualToMountChildrenIntoDelegate)
- [JsiByteArrayUser](JsiByteArrayUser)
- [JsiHostFunction](JsiHostFunction)
- [JsiInitializerDelegate](JsiInitializerDelegate)
- [JSValueArgWriter](JSValueArgWriter)
- [LayoutHandler](LayoutHandler)
- [LogHandler](LogHandler)
- [MeasureContentHandler](MeasureContentHandler)
- [MethodDelegate](MethodDelegate)
- [MethodResultCallback](MethodResultCallback)
- [MountChildComponentViewDelegate](MountChildComponentViewDelegate)
- [PortalComponentViewInitializer](PortalComponentViewInitializer)
- [ReactCreatePropertyValue](ReactCreatePropertyValue)
- [ReactDispatcherCallback](ReactDispatcherCallback)
- [ReactModuleProvider](ReactModuleProvider)
- [ReactNotificationHandler](ReactNotificationHandler)
- [ReactViewComponentProvider](ReactViewComponentProvider)
- [ReactViewManagerProvider](ReactViewManagerProvider)
- [StateUpdateMutation](StateUpdateMutation)
- [SyncMethodDelegate](SyncMethodDelegate)
- [TimerFactory](TimerFactory)
- [UIBatchCompleteCallback](UIBatchCompleteCallback)
- [UnmountChildComponentViewDelegate](UnmountChildComponentViewDelegate)
- [UpdateEventEmitterDelegate](UpdateEventEmitterDelegate)
- [UpdateFinalizerDelegate](UpdateFinalizerDelegate)
- [UpdateLayoutMetricsDelegate](UpdateLayoutMetricsDelegate)
- [UpdatePropsDelegate](UpdatePropsDelegate)
- [UpdateStateDelegate](UpdateStateDelegate)
- [UriBrushFactory](UriBrushFactory)
- [ViewComponentViewInitializer](ViewComponentViewInitializer)
- [ViewPropsFactory](ViewPropsFactory)
- [ViewShadowNodeCloner](ViewShadowNodeCloner)
- [ViewShadowNodeFactory](ViewShadowNodeFactory)
- [VisualToMountChildrenIntoDelegate](VisualToMountChildrenIntoDelegate)

## Enums
- [AccessibilityRoles](AccessibilityRoles)
- [AccessibilityStateCheckedValue](AccessibilityStateCheckedValue)
- [AccessibilityStates](AccessibilityStates)
- [AccessibilityValue](AccessibilityValue)
- [AnimationClass](AnimationClass)
- [AriaRole](AriaRole)
- [BackfaceVisibility](BackfaceVisibility)
- [BackNavigationHandlerKind](BackNavigationHandlerKind)
- [CanvasComposite](CanvasComposite)
- [CanvasEdgeBehavior](CanvasEdgeBehavior)
- [ComponentViewFeatures](ComponentViewFeatures)
- [ComponentViewUpdateMask](ComponentViewUpdateMask)
- [CompositionStretch](CompositionStretch)
- [EffectBorderMode](EffectBorderMode)
- [EffectOptimization](EffectOptimization)
- [FocusNavigationDirection](FocusNavigationDirection)
- [FocusNavigationReason](FocusNavigationReason)
- [ImageSourceType](ImageSourceType)
- [JSIEngine](JSIEngine)
- [JsiErrorType](JsiErrorType)
- [JsiValueKind](JsiValueKind)
- [JSValueType](JSValueType)
- [LayoutDirection](LayoutDirection)
- [LoadingState](LoadingState)
- [LogLevel](LogLevel)
- [MethodReturnType](MethodReturnType)
- [PointerDeviceType](PointerDeviceType)
- [PointerEventKind](PointerEventKind)
- [PointerUpdateKind](PointerUpdateKind)
- [RedBoxErrorType](RedBoxErrorType)
- [ResourceType](ResourceType)
- [ViewManagerPropertyType](ViewManagerPropertyType)

## Interfaces
- [CharacterReceivedRoutedEventArgs](CharacterReceivedRoutedEventArgs)
- [IActivityVisual](IActivityVisual)
- [IBrush](IBrush)
- [ICaretVisual](ICaretVisual)
- [IComponentProps](IComponentProps)
- [IComponentState](IComponentState)
- [ICompositionContext](ICompositionContext)
- [ICustomResourceLoader](ICustomResourceLoader)
- [IDrawingSurfaceBrush](IDrawingSurfaceBrush)
- [IDropShadow](IDropShadow)
- [IFocusVisual](IFocusVisual)
- [IInternalColor](IInternalColor)
- [IInternalComponentView](IInternalComponentView)
- [IInternalCompositionRootView](IInternalCompositionRootView)
- [IInternalCreateVisual](IInternalCreateVisual)
- [IInternalTheme](IInternalTheme)
- [IJsiByteBuffer](IJsiByteBuffer)
- [IJsiHostObject](IJsiHostObject)
- [IJSValueReader](IJSValueReader)
- [IJSValueWriter](IJSValueWriter)
- [IPointerPointTransform](IPointerPointTransform)
- [IPortalStateData](IPortalStateData)
- [IReactCompositionViewComponentBuilder](IReactCompositionViewComponentBuilder)
- [IReactCompositionViewComponentInternalBuilder](IReactCompositionViewComponentInternalBuilder)
- [IReactContext](IReactContext)
- [IReactDispatcher](IReactDispatcher)
- [IReactModuleBuilder](IReactModuleBuilder)
- [IReactNonAbiValue](IReactNonAbiValue)
- [IReactNotificationArgs](IReactNotificationArgs)
- [IReactNotificationService](IReactNotificationService)
- [IReactNotificationSubscription](IReactNotificationSubscription)
- [IReactPackageBuilder](IReactPackageBuilder)
- [IReactPackageBuilderFabric](IReactPackageBuilderFabric)
- [IReactPackageProvider](IReactPackageProvider)
- [IReactPropertyBag](IReactPropertyBag)
- [IReactPropertyName](IReactPropertyName)
- [IReactPropertyNamespace](IReactPropertyNamespace)
- [IReactSettingsSnapshot](IReactSettingsSnapshot)
- [IReactViewComponentBuilder](IReactViewComponentBuilder)
- [IReactViewHost](IReactViewHost)
- [IReactViewInstance](IReactViewInstance)
- [IRedBoxErrorFrameInfo](IRedBoxErrorFrameInfo)
- [IRedBoxErrorInfo](IRedBoxErrorInfo)
- [IRedBoxHandler](IRedBoxHandler)
- [IRoundedRectangleVisual](IRoundedRectangleVisual)
- [IScrollPositionChangedArgs](IScrollPositionChangedArgs)
- [IScrollVisual](IScrollVisual)
- [ISpriteVisual](ISpriteVisual)
- [ITimer](ITimer)
- [IUriImageProvider](IUriImageProvider)
- [IViewManager](IViewManager)
- [IViewManagerCreateWithProperties](IViewManagerCreateWithProperties)
- [IViewManagerRequiresNativeLayout](IViewManagerRequiresNativeLayout)
- [IViewManagerWithChildren](IViewManagerWithChildren)
- [IViewManagerWithCommands](IViewManagerWithCommands)
- [IViewManagerWithDropViewInstance](IViewManagerWithDropViewInstance)
- [IViewManagerWithExportedEventTypeConstants](IViewManagerWithExportedEventTypeConstants)
- [IViewManagerWithExportedViewConstants](IViewManagerWithExportedViewConstants)
- [IViewManagerWithNativeProperties](IViewManagerWithNativeProperties)
- [IViewManagerWithOnLayout](IViewManagerWithOnLayout)
- [IViewManagerWithPointerEvents](IViewManagerWithPointerEvents)
- [IViewManagerWithReactContext](IViewManagerWithReactContext)
- [IVisual](IVisual)
- [KeyboardSource](KeyboardSource)
- [KeyRoutedEventArgs](KeyRoutedEventArgs)
- [RoutedEventArgs](RoutedEventArgs)

## Structs
- [AccessibilityAction](AccessibilityAction)
- [DesktopWindowMessage](DesktopWindowMessage)
- [JsiBigIntRef](JsiBigIntRef)
- [JsiObjectRef](JsiObjectRef)
- [JsiPropertyIdRef](JsiPropertyIdRef)
- [JsiScopeState](JsiScopeState)
- [JsiStringRef](JsiStringRef)
- [JsiSymbolRef](JsiSymbolRef)
- [JsiValueRef](JsiValueRef)
- [JsiWeakObjectRef](JsiWeakObjectRef)
- [LayoutConstraints](LayoutConstraints)
- [LayoutMetrics](LayoutMetrics)
